03_ingress/prod_ingress_https_resources_issure_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s_prod_ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nginx.mahidevops.in
    - httpd.mahidevops.in
    secretName: devops-prod-tls
  rules:
  - host: nginx.mahidevops.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: httpd.mahidevops.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd
            port:
              number: 80
